--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "semi": false
   },
   "dependencies": {
+    "@prisma/client": "^2.22.1",
     "next": "^10.0.7",
     "next-auth": "latest",
     "react": "^17.0.1",
@@ -32,9 +33,10 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.41",
+    "@types/node": "^15.0.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "prisma": "^2.22.1",
     "typescript": "^4.2.4"
   }
 }
